Add basic navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,17 @@
             <div class="nav-logo">
                 <img src="./assets/img/mlh-prep.png" />
             </div>
+            <a href="#members">
+                <div class="nav-item">
+                    Members
+                </div>
+            </a>
+            <a href="#projects">
+                <div class="nav-item">
+                    Projects
+                </div>
+            </a>
         </a>
-        
+
     </div>
 </header>
