--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,5 +1,5 @@
 <div class="profile">
-    <div class="profile-picture">
+    <div id="members" class="profile-picture">
         {% for item in site.data.fellows %}
             <img src="./assets/img/{{ item.img }}">
         {% endfor %}
