added social icons for fellows

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -81,10 +81,12 @@ a {
 .icon {
     width: 70px;
     height: 70px;
+    margin-left: -15px;
     margin-right: 20px;
     padding: 10px;
-
+    display: flex;
     img {
         width: 100%;
+        margin: 0 8%;
     }
 }
