--- a/_includes/description.html
+++ b/_includes/description.html
@@ -5,7 +5,19 @@
         <div class="info">
             <p class="title"> {{ item.name }}</p>
             <p class="location"> {{ item.location }}</p>
+            <div class="icon">
+                <img src="../assets/img/icons/linkedin.png">
+                <img src="../assets/img/icons/twitter.png">
+                <img src="../assets/img/icons/resume.png">
+                <img src="../assets/img/icons/github.png">
+            </div>
         </div>
     </div>
     {% endfor %}
 </div>
+
+<!-- <div class="profile-picture">
+    {% for item in site.data.fellows %}
+        <img src="./assets/img/{{ item.img }}">
+    {% endfor %}
+</div> -->
