--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -3,6 +3,7 @@
 @import 'navbar';
 @import 'profile';
 @import 'page';
+@import 'footer';
 
 .card-container {
     display: grid;
@@ -31,8 +32,11 @@
 
 body {
     background-color: #f5f5f9;
-    margin-bottom: 50px;
+    min-height: 100vh;
+    position: relative;
+    /* margin-bottom: 50px; */
 }
+
 h2 {
     margin-bottom: 20px;
     margin-top: 20px;
