--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -2,6 +2,7 @@
     background-color: #133667 !important;
     text-align: center;
     height: 320px;
+    margin-top: 4.5rem;
     margin-bottom: 50px;
     h1 {
         font-size: 50px;
