--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -9,6 +9,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     font-family: "Open Sans", sans-serif;
+    margin-bottom: 50px;
 }
 
 @media only screen and (max-width: 1500px) {
