--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -9,6 +9,7 @@
 
 footer {
     background-color: #133667;
+    position: absolute;
     color: white;
     width: 100%;
     bottom: 0;
@@ -17,7 +18,6 @@ footer {
 
 .footer-content {
     display: inline-block;
-    text-align: center;
 }
 
 .footer-content img {
