added header image

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -1,5 +1,9 @@
 .profile {
     background-color: #133667 !important;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
     text-align: center;
     height: fit-content;
     margin-top: 4.5rem;
