--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,8 +1,9 @@
-<div class="profile">
-    <div id="members" class="profile-picture">
-        {% for item in site.data.fellows %}
-            <img src="./assets/img/{{ item.img }}">
-        {% endfor %}
-    </div>
-    <h1>{{ site.title }}</h1>
+
+<div class="profile" id="profile" style="background: url('./assets/img/mlhblue.png'); background-size: cover; background-repeat: no-repeat; background-position: center" >
+  <div class="profile-picture">
+      {% for item in site.data.fellows %}
+          <img src="./assets/img/{{ item.img }}">
+      {% endfor %}
+      </div>
+  <h1>{{ site.title }}</h1>
 </div>
