--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,9 +1,19 @@
-
-<div class="profile" id="profile" style="background: url('./assets/img/mlhblue.png'); background-size: cover; background-repeat: no-repeat; background-position: center" >
+<div
+  class="profile"
+  id="profile"
+  style="
+    background: url('./assets/img/mlhblue.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  "
+>
   <div class="profile-picture">
-      {% for item in site.data.fellows %}
-          <img src="./assets/img/{{ item.img }}">
-      {% endfor %}
-      </div>
+    {% for item in site.data.fellows %}
+    <div class="profile-pic-container">
+      <img src="./assets/img/{{ item.img }}" />
+    </div>
+    {% endfor %}
+  </div>
   <h1>{{ site.title }}</h1>
 </div>
