--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
         crossorigin="anonymous"></script>
     <script src="https://jsxss.com/assets/xss.js"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/darkreader@4.9.44/darkreader.js"></script>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
