profile pic hover effect added

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -31,7 +31,9 @@
         object-fit: cover;
         overflow: hidden;
     }
-
+    .profile-pic-container:hover{
+        transform: scale(1.5);
+    }
     .profile-picture {
         margin-bottom: 20px;
         padding-top: 10px;
