adding title for images, and font-awesome

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -63,16 +63,16 @@
                         <p class="location"> ${ fellow.location }</p>
                         <div class="icon">
                             <a ${(!fellow.github) ? "hidden" : ""} href=${fellow.github}>
-                                <img class="social-link-icon" src="../assets/img/icons/github.png">                    
+                                <i class="fab fa-github fa-lg"></i>                    
                             </a>
                             <a ${(!fellow.twitter) ? "hidden" : ""} href=${fellow.twitter}>
-                                <img class="social-link-icon" src="../assets/img/icons/twitter.png">                
+                                <i class="fab fa-twitter fa-lg" style="color: #1DA1F2;"></i>                
                             </a>
                             <a ${(!fellow.resume) ? "hidden" : ""} href=${fellow.resume}>
                                 <img class="social-link-icon" src="../assets/img/icons/resume.png">
                             </a>
                             <a ${(!fellow.linkedin) ? "hidden" : ""} href=${fellow.linkedin}>
-                                <img class="social-link-icon" src="../assets/img/icons/linkedin.png">
+                                <i class="fab fa-linkedin-in fa-lg" style="color: #0A66C2;"></i>
                             </a>
                         </div>
                         <p class="card-score">Commits: ${ fellow.total }</p>
