--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -10,7 +10,7 @@
 >
   <div class="profile-picture">
     {% for item in site.data.fellows %}
-    <div class="profile-pic-container">
+    <div class="profile-pic-container" title={{item.name}}>
       <img src="./assets/img/{{ item.img }}" />
     </div>
     {% endfor %}
