--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -35,7 +35,7 @@ html {
 }
 
 body {
-    background-color: #f5f5f9;
+    background-color: white;
     min-height: 100vh;
     position: relative;
     /* margin-bottom: 50px; */
@@ -53,7 +53,7 @@ h2 {
     flex-direction: row;
     align-items: center;
     margin: 20px 30px;
-    background-color: white;
+    background-color: #e9e9f3;
     border-radius: .375rem;
     padding: 1.5em;
     font-size: 1.2em;
@@ -79,6 +79,7 @@ h2 {
 
 a {
     color: black;
+    cursor: pointer;
 }
 
 .info {
@@ -110,7 +111,11 @@ a {
   display: flexbox;
   
   .social-link-icon {
-    width: 10%;
-    height: 10%;
+    width: 8%;
+    height: 8%;
+  }
+
+  a {
+    padding-right: 2px;
   }
 }
