Fixed profile links for js content

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -59,8 +59,10 @@
                 <div class="card">
                     <div class="info">
                         ${img}
-                        <p class="title"> ${ fellow.name }</p>
-                        <p class="location"> ${ fellow.location }</p>
+                        <a href="/fellows/${fellow.name.replace(/ /g, '-')}">
+                            <p class="title"> ${ fellow.name }</p>
+                            <p class="location"> ${ fellow.location }</p>
+                        <a>
                         <div class="icon">
                             <a ${(!fellow.github) ? "hidden" : ""} href=${fellow.github}>
                                 <img class="social-link-icon" src="../assets/img/icons/github.png">                    
