Fixed resumes icon not showing up

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -14,7 +14,7 @@
                 total: 0,
                 linkedin: "{{ item.linkedin }}",
                 twitter: "{{ item.twitter }}",
-                resum: "{{ item.resume }}"
+                resume: "{{ item.resume }}"
             });
         {% endfor %}
 
