added project images and some styling

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,6 +8,7 @@
           {% else %}
           <a>
           {% endif %}
+          <img src="./assets/img/{{ item.img }}">
           <p class="title">{{ item.title }}</p>
           <p class="owner">By <span class="owner-name">{{ item.owner }}</span></p>
           <p class="location">{{ item.event }}</p>
