--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,8 +1,6 @@
 <h2>Meet the Pod</h2>
 <div id="members" class="card-container">
     <script>
-        const commitUrl = 'https://api.github.com/repos/MLH-Fellowship/prep-portfolio-22.AUG.PREP.2/stats/contributors' // API url
-
         let fellows = []; // initialize array holding fellows
 
         // extract github usernames from fellows.yml
@@ -11,7 +9,7 @@
                 github: "{{ item.github }}",
                 name: "{{ item.name }}",
                 location: "{{ item.location }}",
-                total: 0,
+                commits: 0,
                 linkedin: "{{ item.linkedin }}",
                 twitter: "{{ item.twitter }}",
                 resum: "{{ item.resume }}"
@@ -19,21 +17,26 @@
         {% endfor %}
 
         // get data from github
-        async function getData( url ) {
+        async function getData(url) {
             const res = await fetch( url );
             const data = res.json();
             return data;
         }
 
-        getData(commitUrl).then(data => {
-            let commitData = data.reduce((obj, item) => (obj[item.author.html_url] = item.total, obj) ,{});
+        async function computeScore() {
+            const rawCommitdata = await getData("https://api.github.com/repos/MLH-Fellowship/prep-portfolio-22.AUG.PREP.2/stats/contributors");
+
+            let commitData = rawCommitdata.reduce((obj, item) => (obj[item.author.html_url] = item.total, obj) ,{});
             
             for (const fellow of fellows) {
-                fellow.total = (!commitData[fellow.github]) ? 0 : commitData[fellow.github];
+                fellow.commits = (!commitData[fellow.github]) ? 0 : commitData[fellow.github];
             }
             
+            const rawClosedIssuesData = await getData("https://api.github.com/repos/MLH-Fellowship/prep-portfolio-22.AUG.PREP.2/issues?state=closed")
+            
+            
             fellows.sort((a, b) => {
-                return (a.total < b.total) ? 1 : ((b.total < a.total) ? -1 : 0);
+                return (a.commits < b.commits) ? 1 : ((b.commits < a.commits) ? -1 : 0);
             }); // sort fellows based on total commits
 
             const cardContainer = document.getElementsByClassName('card-container')[0];
@@ -70,7 +73,7 @@
                                 <i class="fab fa-linkedin-in fa-lg" style="color: #0A66C2;"></i>
                             </a>
                         </div>
-                        <p class="card-score">Commits: ${ fellow.total }</p>
+                        <p class="card-score">Commits: ${ fellow.commits }</p>
                     </div>
                 </div>
                 `
@@ -78,6 +81,7 @@
             }
             cardContainer.innerHTML += fellowsHTML;
         }
-    );
+
+        computeScore();
     </script>
 </div>
