--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,11 @@ layout: default
 
 <div class="banner">
     <div class="container">
+        <div class="left-arrow">
+            <a href="/">
+                <img src="/assets/img/icons/left_arrow.png"/>
+            </a>
+        </div>
         <div class="logo">
             <a href="/">
                 <img src="/assets/img/logo.svg"/>
