updated so fellow name links to their page

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -109,6 +109,9 @@ a {
       margin-top: -4px;
       margin-bottom: 10px;
     }
+    .owner .owner-name {
+      font-weight: 600;
+    }
 
     .owner-name {
       color: rgb(27, 54, 100);
