--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,7 +11,13 @@
             <img src="./assets/img/{{ item.img }}">
             <p class="title">{{ item.title }}</p>
           </a>
-          <p class="owner">By <span class="owner-name">{{ item.owner }}</span></p>
+          <p class="owner">By 
+            <span class="owner-name">
+              <a href="/fellows/{{ item.owner-page }}">
+                {{ item.owner }}
+              </a>
+            </span>
+          </p>
           <p class="location">{{ item.event }}</p>
           <p class="dates">{{ item.date }}</p>
           <p class="summary">{{ item.summary }}</p>
