--- a/_includes/description.html
+++ b/_includes/description.html
@@ -6,11 +6,11 @@
         // extract github usernames from fellows.yml
         {% for item in site.data.fellows %} 
             fellows.push({
-                github: "{{ item.github }}",
+                github: "https://github.com/{{ item.github }}",
                 name: "{{ item.name }}",
                 location: "{{ item.location }}",
-                linkedin: "{{ item.linkedin }}",
-                twitter: "{{ item.twitter }}",
+                linkedin: "https://www.linkedin.com/in/{{ item.linkedin }}",
+                twitter: "https://twitter.com/{{ item.twitter }}",
                 resume: "{{ item.resume }}",
                 commits: 0,
                 pullRequests: 0,
@@ -100,16 +100,16 @@
                             <p class="location"> ${ fellow.location }</p>
                         <a>
                         <div class="icon">
-                            <a ${(!fellow.github) ? "hidden" : ""} href=https://github.com/${fellow.github} target="_blank">
+                            <a ${(!fellow.github) ? "hidden" : ""} href=${fellow.github} target="_blank">
                                 <i class="fab fa-github fa-lg"></i>                    
                             </a>
-                            <a ${(!fellow.twitter) ? "hidden" : ""} href=https://twitter.com/${fellow.twitter} target="_blank">
+                            <a ${(!fellow.twitter) ? "hidden" : ""} href=${fellow.twitter} target="_blank">
                                 <i class="fab fa-twitter fa-lg" style="color: #1DA1F2;"></i>                
                             </a>
                             <a ${(!fellow.resume) ? "hidden" : ""} href=${fellow.resume} target="_blank">
                                 <img class="social-link-icon" src="../assets/img/icons/resume.png">
                             </a>
-                            <a ${(!fellow.linkedin) ? "hidden" : ""} href=https://www.linkedin.com/in/${fellow.linkedin}>
+                            <a ${(!fellow.linkedin) ? "hidden" : ""} href=${fellow.linkedin}>
                                 <i class="fab fa-linkedin-in fa-lg" style="color: #0A66C2;"></i>
                             </a>
                         </div>
